Draw a thin box around diffs in the default skin (per [forum:/forumpost/a42aade32dd9d42|forum post a42aade32dd9d42]). Show ellipsis at the tops and bottoms of files, if warranted. Fix a problem with "diff.js" that was failing to link all scrollbars associated with a single diff.
FossilOrigin-Name: 63a5c754fd8d3437e20f7ef0a815ab31aecadc191ed54e5aa64b6be02f238d4f

--- a/src/default.css
+++ b/src/default.css
@@ -536,6 +536,7 @@ ul.filelist li {
 table.diff {
   width: 98%;
   border-spacing: 0;
+  border: 1px solid black;
 }
 table.diff td {
   vertical-align: top;
